# bevy_capture_media

./: Cargo.toml
examples/: basic_orthographic.rs  basic_perspective.rs  multiple_cameras.rs
src/: data.rs  image_utils.rs  lib.rs  management.rs  render.rs
src/formats/: gif.rs  mod.rs  mp4.rs  png.rs
