[package]
name = "bevy_capture_media"
version = "0.0.2"
edition = "2021"
authors = ["Louis Capitanchik <louis@microhacks.co.uk"]
license = "Apache-2.0"
repository = "https://github.com/Commander-lol/bevy_capture_media"
description = "Event based screenshots & recording for Bevy Engine"
exclude = ["assets"]

[features]
default = ["png"]
png = ["dep:image"]
gif = ["dep:image", "dep:gif", "dep:color_quant", "dep:fnv"]
parallel = ["dep:rayon"]

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = ["multi-threaded", "x11", "bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_sprite", "bevy_pbr", "bevy_text"] }

#bevy = { version = "0.8", default-features = false, features = ["render", "bevy_winit", "png"] }
log = "0.4"
wgpu = "0.19.4"
futures-lite = "2.3"

# Dependencies for all image types
image = { version = "0.25", optional = true }

# Dependencies for GIFs
gif = { version = "0.13", optional = true }
color_quant = { version = "1.1.0", optional = true }
rayon = { version = "1.10", optional = true }
fnv = { version = "1" , optional = true}
base64 = "0.22.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3.69" }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.69"
features = [
	"Window",
	"Document",
	"Blob",
	"BlobPropertyBag",
	"Element",
	"HtmlElement",
	"FileReader",
	"HtmlCollection",
]

[package.metadata.docs.rs]
all-features = true
cargo-args = ["--cfg", "docsrs"]
